--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -37,6 +37,19 @@
                 });
                 return json;
             })(); 
+            var store = (function () {
+                var store = null;
+                $.ajax({
+                    'async': false,
+                    'global': false,
+                    'url': "lunr.json",
+                    'dataType': "json",
+                    'success': function (data) {
+                        store = data;
+                    }
+                });
+                return store;
+            })(); 
             function displaySearchResults(results, store) {
                 var searchResults = document.getElementById('search-results');
 
@@ -54,7 +67,6 @@
                 }
               }
             function search() {
-              console.log("JSON : "+json);
               
 
               var searchTerm = document.getElementById('search-box').value;
@@ -67,7 +79,7 @@
                  var results = idx.search(searchTerm); // Get lunr to perform a search
                  
                 console.log("FINISHING SEARCH");
-                 displaySearchResults(results, json); // We'll write this in the next section
+                 displaySearchResults(results, store); // We'll write this in the next section
                  
               }
               
