--- a/_layouts/other.html
+++ b/_layouts/other.html
@@ -3,14 +3,7 @@
     <html lang="en"><head><meta charset="utf-8"><title>{{ page.title }}</title></head>
         <body>
             {% include style.html %}
-            <div class="w3-bar w3-white w3-hide-small w3-display-center">
-              <a href="/" class="w3-bar-item w3-button"><img src="/images/icon_gama_50.png"></a>
-              <a href="/wiki/Home" class="w3-bar-item w3-button w3-text-blue">Documentation</a>
-              <a href="/wiki/Tutorials" class="w3-bar-item w3-button w3-text-blue">Tutorials</a>
-              <a href="/download" class="w3-bar-item w3-button w3-text-blue">Download</a>
-              <a href="/news" class="w3-bar-item w3-button w3-text-blue">News</a>
-              <a href="/contribute" class="w3-bar-item w3-button w3-text-blue">Contribute</a>
-            </div>
+            {% include menu.html %}
                 {{ content }}
         </body>
     </html>
