--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -1,14 +1,14 @@
 <div class="w3-bar w3-white w3-hide-small w3-display-center">
               <div class="w3-left-align">
               <a href="/" class="w3-bar-item w3-button"><img src="/images/icon_gama_50.png"></a>
-              <a href="/wiki/Home" class="w3-bar-item w3-button w3-text-blue w3-hover-white w3-hover-text-white">Documentation</a>
-              <a href="/wiki/Tutorials" class="w3-bar-item w3-button w3-text-blue">Tutorials</a>
-              <a href="/download" class="w3-bar-item w3-button w3-text-blue">Download</a>
-              <a href="/news" class="w3-bar-item w3-button w3-text-blue">News</a>
-              <a href="/contribute" class="w3-bar-item w3-button w3-text-blue">Contribute</a>
+              <a href="/wiki/Home" class="w3-bar-item w3-button w3-text-blue w3-hover-blue w3-hover-text-white"><b>DOCUMENTATION</b></a>
+              <a href="/wiki/Tutorials" class="w3-bar-item w3-button w3-text-blue w3-hover-blue w3-hover-text-white"><b>TUTORIALS</b></a>
+              <a href="/download" class="w3-bar-item w3-button w3-text-blue w3-hover-blue w3-hover-text-white"><b>DOWNLOAD</b></a>
+              <a href="/news" class="w3-bar-item w3-button w3-text-blue w3-hover-blue w3-hover-text-white"><b>NEWS</b></a>
+              <a href="/contribute" class="w3-bar-item w3-button w3-text-blue w3-hover-blue w3-hover-text-white"><b>CONTRIBUTE</b></a>
               <div class="w3-bar-item w3-right"><input type="text" id="search-box" name="search-box">
                     <i class="fa fa-search w3-text-blue" aria-hidden="true" onclick="search();"></i>
-                    <div class="w3-sidebar w3-bar-block w3-card-2 w3-animate-right w3-quarter" style="display:none;right:0;" id="rightMenu">
+                    <div class="w3-sidebar w3-bar-block w3-card-2 w3-animate-right w3-quarter " style="display:none;right:0;opacity: 0.9;" id="rightMenu">
                       <i onclick="closeRightMenu()" class="fa fa-times w3-bar-item w3-large"></i>
                       <div id="search-results" ></div>
                     </div>
