--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -6,7 +6,7 @@
               <a href="/download" class="w3-bar-item w3-button w3-text-blue w3-hover-blue w3-hover-text-white"><b>DOWNLOAD</b></a>
               <a href="/news" class="w3-bar-item w3-button w3-text-blue w3-hover-blue w3-hover-text-white"><b>NEWS</b></a>
               <a href="/contribute" class="w3-bar-item w3-button w3-text-blue w3-hover-blue w3-hover-text-white"><b>CONTRIBUTE</b></a>
-              <div class="w3-bar-item w3-right"><input type="text" id="search-box" name="search-box">
+              <div class="w3-bar-item w3-right"><input type="text" id="search-box" name="search-box" onkeypress="return checkEntry(event)">
                     <i class="fa fa-search w3-text-blue" aria-hidden="true" onclick="search();"></i>
                     <div class="w3-sidebar w3-bar-block w3-card-2 w3-animate-right w3-quarter " style="display:none;right:0;opacity: 0.9;" id="rightMenu">
                       <i onclick="closeRightMenu()" class="fa fa-times w3-bar-item w3-large"></i>
@@ -18,6 +18,12 @@
             </div>
 </div>
 <script>
+function checkEntry(e){
+    if(e.keyCode==13)
+    {
+        search();
+    }
+};
 var json = (function () {
     var json = null;
     $.ajax({
@@ -40,8 +46,9 @@ var store = {
       {% unless forloop.last %},{% endunless %}
     {% endfor %}
   };
+var idx = lunr.Index.load(json);
+var searchResults = document.getElementById('search-results');
 function displaySearchResults(results, store) {
-    var searchResults = document.getElementById('search-results');
 
     if (results.length) { // Are there any results?
       var appendString = '';
@@ -63,12 +70,10 @@ function displaySearchResults(results, store) {
     } else {
       searchResults.innerHTML = 'No results found';
     }
-    openRightMenu()();
+    openRightMenu();
   }
 function search() {
-  
-
-  var searchTerm = document.getElementById('search-box').value;
+  var searchTerm = document.getElementById("search-box").value;
 
   if (searchTerm) {
      // Initalize lunr with the fields it will be searching on. I've given title
@@ -76,7 +81,6 @@ function search() {
     var idx = lunr.Index.load(json)
     console.log("FINISHING INDEX");
      var results = idx.search(searchTerm); // Get lunr to perform a search
-     
     console.log("FINISHING SEARCH");
      displaySearchResults(results, store); // We'll write this in the next section
      
